--- a/gin-render/templates/layout.tmpl
+++ b/gin-render/templates/layout.tmpl
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>go-webpack QOR demo</title>
-    {{ asset "vendor.css" }}
+    <title>go-webpack Gin demo</title>
     {{ asset "application.css" }}
   </head>
   <body>
     <div class="page-wrap">
-      {{yield}}
+      {{ yield }}
     </div>
     {{ asset "vendor.js" }}
     {{ asset "application.js" }}
   </body>
 </html>
+
 
